# TeamUP

./: .env  .env.example  .gitignore  README.md  README.md.bak.20260313151344  pyproject.toml
alembic/: env.py  env.py.bak.20260313151351
docs/: ARCHITECTURE.md
experiments/: data_exploration.ipynb  visualization.ipynb
public/pages/: PasswordRecoveryFirst.html  PasswordRecoverySecond.html  login.html  registration.html
public/scripts/: script.js
public/styles/: style.css
src/TeamFinder/application/: __init__.py
src/TeamFinder/application/repositories/: user_repository.py
src/TeamFinder/core/: __init__.py  api_security.py  logging.py  settings.py
src/TeamFinder/core/config/: application.py  security.py
src/TeamFinder/domain/: __init__.py  enums.py
src/TeamFinder/domain/entities/: __init__.py  announcement.py  complaint.py  complaints.py  game.py  player_raiting.py  rank.py  response.py  user.py  user_game.py  user_games.py
src/TeamFinder/infrastrucuture/: __init__.py
src/teamup/: __init__.py.bak.20260313151252  __init__.py.bak.20260313151359  main.py
src/teamup/api/: __init__.py  __init__.py.bak.20260313150753  __init__.py.bak.20260313151407
src/teamup/api/di/: jwt.py  (+3 more)
src/teamup/application/: __init__.py.bak.20260313150821
src/teamup/core/: __init__.py  settings.py
src/teamup/domain/: __init__.py  enums.py
src/teamup/infra/: __init__.py
src/teamup/schemas/: __init__.py.bak.20260313151038  auth.py
src/teamup/utils/: __init__.py  __init__.py.bak.20260313151047  db_create_all.py
tests/: __init__.py  test_db_connection.py  test_log.py
(+64 files in other folders)
